lesson2/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: lesson2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: lesson2
    spec:
      containers:
        - name: user-service
          image: spomprt/users:latest
          ports:
            - containerPort: 8000
