lesson2/k8s/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod
  labels:
    app: lesson2
spec:
  containers:
    - name: user-service
      image: spomprt/users:latest
      ports:
        - containerPort: 8000
      volumeMounts:
        - name: config
          mountPath: "/config"
          readOnly: true
