lesson2/k8s/db.yml
apiVersion: v1
kind: Service
metadata:
  name: user-db-service
spec:
  ports:
    - port: 5432
  selector:
    app: user-db
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-db-deployment
spec:
  selector:
    matchLabels:
      app: user-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: user-db
    spec:
      containers:
        - image: postgres:14.2
          name: user-db
          ports:
            - containerPort: 5432
              name: db
