lesson2/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  type: ClusterIP
  selector:
    app: lesson2
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      name: http
