lesson2/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "arch.homework"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: user-service
                port:
                  number: 9999
